# kunci

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
bsd/: README.md  install.sh  kunci.conf.example  kunci_zfs
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: admin.rs  crypto.rs  error.rs  jose.rs  jwk.rs  keys.rs  lib.rs  log.rs  luks.rs  pin.rs  remote.rs  sss.rs  tang.rs  thumbprint.rs  tpm2.rs  yubikey.rs  zfs.rs
core/src/tang/: protocol.rs
core/tests/: integration.rs
dmcrypt/: Cargo.toml  build.rs
dmcrypt/src/: lib.rs
docs/: config.md  hardening-plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: jwe_compact.rs  jwk_parse.rs  jws_payload.rs  pin_config.rs  tang_advertisement.rs  thumbprint.rs
scripts/: build-mfsroot.sh  coverage.sh
scripts/assets/: init  keep.list
server/: Cargo.toml
server/src/: main.rs
