[package]
name = "kunci-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and utilities for Tang and Clevis implementation in Rust"
readme.workspace = true
keywords = ["tang", "clevis", "jose", "jwk", "cryptography"]
categories.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
digest = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }

# Optional cryptographic dependencies
elliptic-curve = { workspace = true, optional = true, features = ["ecdh", "arithmetic"] }
p256 = { workspace = true, optional = true, features = ["ecdh", "arithmetic", "ecdsa"] }
p384 = { workspace = true, optional = true, features = ["ecdh", "arithmetic", "ecdsa"] }
p521 = { workspace = true, optional = true, features = ["ecdh", "arithmetic", "ecdsa"] }
aes-gcm = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# TPM2 dependencies
tss-esapi = { version = "7", optional = true }

# Shamir's Secret Sharing dependencies
num-bigint = { workspace = true, features = ["rand", "serde"] }
num-traits = { workspace = true }
num-integer = { workspace = true }

[features]
default = ["full"]
full = ["elliptic-curve", "p256", "p384", "p521", "aes-gcm", "reqwest"]
tpm2 = ["tss-esapi"]
property-test = []

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
proptest = "1.9.0"
